// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Panel /> should handle props 1`] = `
<div>
  <div
    class="root type-info bg-color__basic-gray4 color__basic-gray87 test-class"
    data-testid="panel"
  >
    <div
      class="adornment"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M8 6.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zM8 5.5a1 1 0 100-2 1 1 0 000 2z"
        />
        <path
          clip-rule="evenodd"
          d="M0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="main"
    >
      Hello, world!
    </div>
    <div
      class="adornment"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M9 11a1 1 0 11-2 0 1 1 0 012 0z"
        />
        <path
          clip-rule="evenodd"
          d="M4 6V4a4 4 0 118 0v2a3 3 0 013 3v4a3 3 0 01-3 3H4a3 3 0 01-3-3V9a3 3 0 013-3zm2-2a2 2 0 114 0v2H6V4zM4 8a1 1 0 00-1 1v4a1 1 0 001 1h8a1 1 0 001-1V9a1 1 0 00-1-1H4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Panel /> should handle unknown content 1`] = `
<div>
  <div
    class="root type-info bg-color__basic-gray4 color__basic-gray87 test-class"
    data-testid="panel"
  >
    <div
      class="main"
    >
      <div
        class="unknown-content"
      >
        Lorem 
        <i
          data-testid="ipsum"
        >
          ipsum
        </i>
         
        <b>
          dolor
        </b>
         sit.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Panel /> should renders without props 1`] = `
<div>
  <div
    class="root type-info bg-color__basic-gray4 color__basic-gray87"
    data-testid="panel"
  >
    <div
      class="main"
    />
  </div>
</div>
`;
